control service y sweet alert

--- a/src/app/DemoPages/UserPages/login-boxed/login-boxed.component.html
+++ b/src/app/DemoPages/UserPages/login-boxed/login-boxed.component.html
@@ -38,7 +38,7 @@
             <div class="float-left"><a [routerLink]="" class="btn-lg btn btn-link">Recover
               Password</a></div>
             <div class="float-right">
-              <button type="button" class="btn btn-primary btn-lg">Login to Dashboard</button>
+              <button type="button" (click)="testAlert()" class="btn btn-primary btn-lg">Login to Dashboard</button>
             </div>
           </div>
         </div>
